# crypturi

./: Cargo.toml  Dockerfile
public/: 1.txt  2.txt  3.txt  4.txt  5.txt
src/: app_state.rs  chapter_a.rs  chapter_b.rs  chapter_c.rs  chapter_d.rs  chapter_e.rs  chapter_f.rs  finish.rs  main.rs  welcome.rs
templates/: base.html  chapter_a.html  chapter_b.html  chapter_c.html  chapter_d.html  chapter_e.html  chapter_f.html  finish.html  level_a.html  welcome.html
