[package]
name = "crypturi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["form"] }
chrono = "0.4.40"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
